# KnowThyself

./: .gitignore  Makefile_template  README.md  langgraph.json  pyproject.toml  pyproject_test.toml  requirements.txt  requirements_bk.txt
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
kyllm_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: agent_config.py  webapp.py
src/demo/: generate_embed.py
src/demo/faiss_index/: index.faiss  index.pkl
src/knowthyself/: graph.py
src/knowthyself/tools/: utils.py
src/knowthyself/tools/bias_evaluation/: honest_evaluation.py  regard_evaluation.py  toxicity_evaluation.py
src/knowthyself/tools/transformerlens/: transformerlens_utils.py
src/knowthyself/utils/: generate_embed.py  graph_utils.py  model_manager.py  node_agents.py  prompts.py  sentence_extractor.py  test_model_manager.py
src/knowthyself/workflows/: bertviz_workflow.py  bias_detection_workflow.py  load_model_workflow.py  local_interpretation.py  rag_workflow.py  trans_lens_backup.py  transformer_lens_workflow.py
src/kyllm_agent/: __init__.py  graph.py  webapp.py
src/transformer_lens_utils/: indirect_obj_identification.py  utils_replace.py
src/utils/: generate_embed.py
src/workflows/: local_interpretation.py
test/unit_tests/: test_gemma.py  test_prompt.py
