[project]
name = "KnowThyself"
version = "0.0.1"
description = "An Agentic Assistant for LLM Interpretability"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "torch==2.6.0",
    "plotly==6.0.1",
    "IPython==9.0.2",
    "circuitsvis==1.43.3",
    "langgraph>=0.2.6",
    "python-dotenv>=1.0.1",
    "tavily-python>=0.4.0",
    "langgraph-cli[inmem]>=0.1.68",
    "scikit-learn>=1.6.1",
    "transformer_lens>=2.15.0",
    "matplotlib==3.10.1",
    "fastapi==0.115.12",
    "pydantic==2.11.2",
    "markitdown[all]==0.1.1",
    "faiss-cpu==1.7.4",
    "tiktoken>=0.7.0"
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kyllm_agent"]
[tool.setuptools.package-dir]
"kyllm_agent" = "src/kyllm_agent"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"